<resources>
    <string name="app_name">Papa John\'s Delivery App</string>
    <string name="action_settings">Settings</string>
    <string name="recent_deliveries">Recent Deliveries</string>
    <string name="login">Login</string>
    <string name="newline"/>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="decimal">.</string>
    <string name="blank_cost">__</string>
    <string name="amount">Amount: </string>
    <string name="this_order">This Order</string>
    <string name="default_customer0">Mary P.</string>
    <string name="default_phone_number0">555-555-5555</string>
    <string name="large_cheese">1 Lg Chs</string>
    <string name="pepsi">1 2L pepsi</string>
    <string name="garlic">1 garlic</string>
    <string name="cheese">1 cheese</string>
    <string name="default_customer_note0">Please use side door</string>
    <string name="default_amount0">$18.52 cash</string>
    <string name="arrived">Arrived!</string>
    <string name="order_id0">d554367</string>
    <string name="line_divider">_____________</string>
    <string name="got_it">Got It!</string>
    <string name="accept_route">Accept Route</string>
    <string name="order_address0">6715 E. Ridgeway Dr.</string>
    <string name="driver_name">{Driver Name}</string>
    <string name="driver_employee_number">{Driver Employee Number}</string>
    <string name="clock_status">Clocked Out -</string>
    <string name="clock_time">3:48</string>
    <string name="clock_out">Clock Out</string>
    <string name="clock_in">Clock In</string>
    <string name="tip_total_title">Tip Total</string>
    <string name="tip_total">{Tip Total}</string>
    <string name="hours_scheduled_title">Hours Scheduled</string>
    <string name="scheduled_hours">{Hours}</string>
    <string name="hours_worked_title">Hours Worked</string>
    <string name="hours_worked">{Hours}</string>
    <string name="settings">Settings</string>
    <string name="navigation">Navigation</string>
    <string name="delivery">Delivery</string>
    <string name="to_store">To Store</string>
    <string name="alert_sound">Alert Sound</string>
    <string name="color_blind_mode">Color Blind Mode</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="call_customer">Call Customer?</string>
    <string name="log_cash_tip">Log Cash Tip</string>
    <string name="return_to_store">Return to Store</string>
    <string name="dialog_login_title">Login</string>
    <string name="STORE_ADDRESS">geo:39.4667,87.4139?q=1234 Wabash Ave, Terre Haute, IN 47807</string>
    <string-array name="time_array">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
</resources>
