<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorRed"
                android:padding="32dp"
>

    <Button
            android:id="@+id/accept_route_button"
            android:text="@string/accept_route"
            android:background="@color/colorRed"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
    />

    <TextView
            android:id="@+id/address_text"
            android:text="@string/order_address0"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accept_route_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
    />

    <TextView
            android:id="@+id/item0_text"
            android:text="@string/large_cheese"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24sp"
    />

    <TextView
            android:id="@+id/item1_text"
            android:text="@string/garlic"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item0_text"
            android:layout_centerHorizontal="true"
    />

    <TextView
            android:id="@+id/item2_text"
            android:text="@string/cheese"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item1_text"
            android:layout_centerHorizontal="true"
    />

    <TextView
            android:id="@+id/item3_text"
            android:text="@string/pepsi"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item2_text"
            android:layout_centerHorizontal="true"
    />

    <TextView
            android:id="@+id/amount_text"
            android:text="@string/default_amount0"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item3_text"
            android:layout_marginTop="24sp"
            android:layout_centerHorizontal="true"
    />


</RelativeLayout>