<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_call_customer"
>

    <TextView
            android:id="@+id/call_customer_text"
            android:text="@string/call_customer"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="40sp"
            android:layout_centerHorizontal="true"
    />

    <Button
            android:id="@+id/call_customer_button"
            android:text="@string/call"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="40sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/call_customer_text"
    />

    <Button
            android:id="@+id/cancel_call_button"
            android:text="@string/cancel"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="40sp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/call_customer_button"
    />


</RelativeLayout>