<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:mstb="http://schemas.android.com/apk/res-auto">

    <ImageButton
            android:id="@+id/fragment_profile_imageButton_profile"
            android:layout_width="105dp"
            android:layout_height="100dp"
            android:background="@color/colorOrange"
            android:src="@drawable/profile"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
    />

    <ImageButton
            android:id="@+id/fragment_profile_imageButton_settings"
            android:layout_width="105dp"
            android:layout_height="100dp"
            android:background="@color/colorOrange"
            android:src="@drawable/settings"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
    />

    <ImageButton
            android:id="@+id/fragment_profile_imageButton_logo"
            android:layout_width="190dp"
            android:layout_height="100dp"
            android:background="@color/colorWhite"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

    />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_profile_imageButton_logo">

        <TextView
                android:id="@+id/fragment_profile_textView_driver_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlue"
                android:text="@string/driver_name"
                android:textSize="20sp"
                android:padding="5dp"
        />

        <TextView
                android:id="@+id/fragment_profile_textView_driver_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_profile_textView_driver_name"
                android:background="@color/colorBlue"
                android:text="@string/driver_employee_number"
                android:textSize="20sp"
                android:padding="5dp"
        />

        <TextView
                android:id="@+id/fragment_profile_textView_clock_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_profile_textView_driver_number"
                android:background="@color/colorBlue"
                android:text="@string/clock_status"
                android:textSize="20sp"
                android:padding="5dp"
        />

        <TextView
                android:id="@+id/fragment_profile_textView_clock_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clock_time"
                android:textSize="20sp"
                android:padding="5dp"
                android:background="@color/colorBlue"
                android:layout_toRightOf="@id/fragment_profile_textView_clock_status"
                android:layout_below="@id/fragment_profile_textView_driver_number"
        />

        <ToggleButton
                android:id="@+id/fragment_profile_toggleButton_clock"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginLeft="185dp"
                android:layout_below="@id/fragment_profile_textView_driver_number"
                android:textOn="@string/clock_out"
                android:textOff="@string/clock_in"
                android:background="@color/colorOrange"
        />

        <ImageView
                android:layout_below="@id/fragment_profile_toggleButton_clock"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/colorBlue"/>

        <org.honorato.multistatetogglebutton.MultiStateToggleButton
                android:id="@+id/mstb_multi_id"
                android:layout_width="400dp"
                android:layout_height="40dp"
                android:layout_below="@+id/fragment_profile_textView_clock_status"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dip"
                mstb:values="@array/time_array"
                mstb:mstbPrimaryColor="@color/colorWhite"
                mstb:mstbSecondaryColor="@color/colorBlack"
                mstb:mstbColorNotPressedBackground="@color/colorBlack"
                mstb:mstbColorPressedBackground="@color/colorOrange"
                android:background="@color/colorBlue"/>


        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_below="@id/mstb_multi_id"
                     android:layout_centerHorizontal="true"
                     android:background="@color/colorBlue"
                     android:padding="20dp"
        >

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorGray">



                <TextView
                        android:id="@+id/fragment_profile_textView_tip_total_title"
                        android:text="@string/tip_total_title"
                        android:textSize="20dp"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_column="1" />
                <TextView
                        android:id="@+id/fragment_profile_textView_tip_total"
                        android:text="@string/tip_total"
                        android:textSize="20dp"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_column="2" />

            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorWhite">

                <TextView
                        android:id="@+id/fragment_profile_textView_hours_scheduled_titled"
                        android:text="@string/hours_scheduled_title"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_column="1" />
                <TextView
                        android:id="@+id/fragment_profile_textView_hours_scheduled"
                        android:text="@string/scheduled_hours"
                        android:textSize="20dp"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_column="2" />

            </TableRow>

        </TableLayout>


    </RelativeLayout>



</RelativeLayout>