<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:mstb="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorGreen">

    <ImageButton
            android:id="@+id/fragment_settings_imageButton_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/colorRed"
            android:src="@drawable/profile"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
    />

    <ImageButton
            android:id="@+id/fragment_settings_imageButton_settings"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/colorRed"
            android:src="@drawable/settings"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
    />

    <ImageView
            android:id="@+id/fragment_settings_imageView_logo"
            android:layout_width="210dp"
            android:layout_height="100dp"
            android:background="@color/colorGreen"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

    />

    <TextView
            android:id="@+id/fragment_settings_textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/fragment_settings_imageView_logo"
            android:text="@string/settings"
            android:textSize="40sp"
            android:textStyle="bold"
    />

    <TextView
            android:id="@+id/fragment_settings_textView_navigation"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_settings_textView_title"
            android:background="@color/colorGray"
            android:text="@string/navigation"
            android:textSize="25sp"
            android:layout_margin="5dp"
    />

    <TextView
            android:id="@+id/fragment_settings_textView_navigation_delivery"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_settings_textView_navigation"
            android:background="@color/colorGray"
            android:text="@string/delivery"
            android:textSize="25sp"
            android:layout_marginLeft="105dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
    />

    <TextView
            android:id="@+id/fragment_settings_textView_navigation_to_store"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_settings_textView_navigation_delivery"
            android:background="@color/colorGray"
            android:text="@string/to_store"
            android:textSize="25sp"
            android:layout_marginLeft="105dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
    />

    <TextView
            android:id="@+id/fragment_settings_textView_alert_sound"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_settings_textView_navigation_to_store"
            android:background="@color/colorGray"
            android:text="@string/alert_sound"
            android:textSize="25sp"
            android:layout_margin="5dp"
    />

    <TextView
            android:id="@+id/fragment_settings_textView_color_blind_mode"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_settings_textView_alert_sound"
            android:background="@color/colorGray"
            android:text="@string/color_blind_mode"
            android:textSize="25sp"
            android:layout_margin="5dp"
    />

    <Switch
            android:id="@+id/fragment_settings_switch_navigation"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/fragment_settings_textView_navigation"
            android:layout_below="@+id/fragment_settings_textView_title"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:thumbTint="@color/colorBlack"
            android:track="@color/colorRed"
    />

    <Switch
            android:id="@+id/fragment_settings_switch_navigation_delivery"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/fragment_settings_textView_navigation_delivery"
            android:layout_below="@+id/fragment_settings_textView_navigation"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:thumbTint="@color/colorBlack"
            android:track="@color/colorRed"
    />

    <Switch
            android:id="@+id/fragment_settings_switch_navigation_to_store"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/fragment_settings_textView_navigation_to_store"
            android:layout_below="@+id/fragment_settings_textView_navigation_delivery"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:thumbTint="@color/colorBlack"
            android:track="@color/colorRed"
    />

    <Switch
            android:id="@+id/fragment_settings_switch_alert_sound"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/fragment_settings_textView_alert_sound"
            android:layout_below="@+id/fragment_settings_textView_navigation_to_store"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:thumbTint="@color/colorBlack"
            android:track="@color/colorRed"
    />

    <Switch
            android:id="@+id/fragment_settings_switch_color_blind_mode"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/fragment_settings_textView_color_blind_mode"
            android:layout_below="@+id/fragment_settings_textView_alert_sound"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:thumbTint="@color/colorBlack"
            android:track="@color/colorRed"
    />




</RelativeLayout>